# FlexRent

./: CMakeLists.txt  代码仓库结构.md  要求.pptx
doc/: std.docx  《程序设计基础（C语言）课程设计》验收自测表.xlsx  模板.docx  程序设计基础（C语言）课程设计报告.docx  程序设计基础（C语言）课程设计报告撰写要求和提纲.docx  验收安排-2024 - 全体.pptx
doc/要求/: 模板.docx  要求.docx
head/: admin.h  area.h  check.h  city.h  core.h  date.h  hash.h  hashtreap.h  head.h  house.h  intlist.h  middium.h  place.h  renthousemsg.h  tag.h  typedefine.h  ui.h  user.h  viewhousemsg.h  voidlist.h  voidtreap.h
src/: admin.c  date.c  hash.c  hashtreap.c  intlist.c  main.c  place.c  voidlist.c  voidtreap.c
